--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Hello-world</h1>
+        <h1>Welcome to the Jin’s homepage!</h1>
         <h2>It is a simple exercise that let me started when learning GitHub. Let’s get started with GitHub!</h2>
         <a href="https://github.com/huangjin0209/hello-world" class="button"><small>View project on</small> GitHub</a>
       </div>
